--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/gsap.min.js"></script>
   </body>
 </html>
