--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-
   </head>
   <body>
-      <p class="text">Loading...</p>
+    <p class="text">Loading...</p>
+    <div class="instructions">Press Arrow Up to Move .. Release it to Stop</div>
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/main.js"></script>
     <script src="js/gsap.min.js"></script>
-    
   </body>
 </html>
