--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <body>
     <p class="text">Loading...</p>
     <div class="instructions">Press Arrow Up to Move .. Release it to Stop</div>
+    <div class="image">
+      <img src="https://setgis.net/images/squid_game.png" alt="" />
+    </div>
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/main.js"></script>
